/*
 * Copyright Terracotta, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import org.gradle.internal.jvm.Jvm

apply plugin: EhDeploy

dependencies {
  compileOnly project(':api')
  compileOnly project(':xml')
  compile project(':clustered:common'), "org.slf4j:slf4j-api:$parent.slf4jVersion"
  provided "org.terracotta:entity-client-api:$parent.entityApiVersion"
  provided "org.terracotta:runnel:$parent.terracottaPlatformVersion"

  testCompile project(':api')
  testCompile project(':xml')
  testCompile project(':transactions')
  testCompile(project(':clustered:server')) {
    exclude group: 'org.terracotta.internal', module: 'tc-config-parser'
  }
  testCompile "org.terracotta:entity-test-lib:$parent.entityTestLibVersion"
  testCompile "org.terracotta:passthrough-server:$parent.terracottaPassthroughTestingVersion"
}

compileTestJava {
  options.forkOptions.javaHome = Jvm.current().javaHome
  sourceCompatibility = 1.8
  targetCompatibility = 1.8
}

test {
  if (!testJava.javaVersion.isJava8Compatible()) {
    executable = Jvm.current().javaExecutable
  }
  if (testJava.javaVersion.isJava9Compatible()) {
    jvmArgs += ['--add-modules', 'java.xml.bind']
  }
}

tasks.withType(JavaCompile) {
  options.compilerArgs += ['-Werror']
}
